--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Aaron HuSun professional website">
     <title>Aaron HuSun</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script defer src="/static/script.js"></script>
+    <script defer src="static/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body onload="addYear()">
@@ -28,7 +28,7 @@
     </header>
     <div class="main">
         <h2 id="greeting"></h2>
-        <img src="../static/me.jpg" alt="Aaron HuSun profile image" width="350px" class="classA">
+        <img src="static/me.jpg" alt="Aaron HuSun profile image" width="350px" class="classA">
         <div class="classA">
             <span id="shortIntro"> Hi, I'm Aaron HuSun, an undergraduate first year at Carnegie Mellon University. I'm majoring in Information Systems, 
                 with an intended additional major in Computer Science. I am currently involved in TEDxCMU as part of the innovation team, 
